crates/pg_syntax/tests/snapshots/postgres_regress/tstypes@168.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT ts_rank_cd(' a:1 sa:2C d g'::tsvector, 'a | s:*');"
---
SelectStmt@0..57
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..55
    FuncCall@7..55
      Ident@7..17 "ts_rank_cd"
      Ascii40@17..18 "("
      TypeCast@18..44
        AConst@18..34
          Sconst@18..34 "' a:1 sa:2C d g'"
        Typecast@34..36 "::"
        TypeName@36..44
          Ident@36..44 "tsvector"
      Ascii44@44..45 ","
      Whitespace@45..46 " "
      AConst@46..55
        Sconst@46..55 "'a | s:*'"
  Ascii41@55..56 ")"
  Ascii59@56..57 ";"

